# scribe

./: .gitignore  .pypirc.template  .readthedocs-alternative.yml  .readthedocs.yml  CHANGELOG.md  DEPLOYMENT.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  MANIFEST.in  Makefile  PACKAGING.md  README.md  netlify.toml  pyproject.toml  setup.py  vercel.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api_reference.rst  configuration.rst  examples.rst  quickstart.rst  requirements.txt  user_guide.rst
docs/source/: api_reference.rst  conf.py  configuration.rst  contributing.rst  examples.rst  index.rst  installation.rst  quickstart-clean.rst  quickstart.rst  user_guide.rst
examples/: scribe.config.yaml
scribe/: __init__.py  cli.py  config.py  config_cli.py  init.py  parser.py
scribe/generators/: __init__.py  protobuf.py  python.py  scala.py
tests/: __init__.py  test_cli.py  test_enhanced_config.py  test_parser.py  test_protobuf_generator.py  test_python_generator.py  test_scala_generator.py
